@@ -1,3 +1,7 @@
+Fri Feb 12 21:11:18 1999  Tom Yu  <tlyu@mit.edu>
+
+	* ftpd.c: strcat -> strncat
+
 1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in: Set the myfulldir and mydir variables (which are
